#add_executable(echoClient_socket9 echoClient.cc)
#add_executable(echoServer_socket9 echoServer2.cc)
add_executable(echosrv3_nianbao echosrv3.cpp)
add_executable(echocli3_nianbao echocli3.cpp)
add_executable(echosrv_readline echosrv4.cpp)
add_executable(echocli_readline echocli4.cpp)
add_executable(gethostname gethostname.cpp)
add_executable(zombieHandleSrv zombieHandleSrv.cpp)
add_executable(zombieHandleCli zombieHandleCli.cpp)
add_executable(zombieHandler zombieHandler.cpp)
add_executable(zombieMultiCli zombieMultiCli.cpp)
add_executable(zombieWaitpid zombieWaitpid.cpp)
add_executable(testSigpipe testSIGPIPE.cpp)

