#add_executable(echoClient_socket9 echoClient.cc)
#add_executable(echoServer_socket9 echoServer2.cc)
add_executable(echosrv3_nianbao echosrv3.cpp)
add_executable(echocli3_nianbao echocli3.cpp)
add_executable(echosrv_readline echosrv4.cpp)
add_executable(echocli_readline echocli4.cpp)
add_executable(gethostname gethostname.cpp)
add_executable(zombieHandleSrv zombieHandleSrv.cpp)
add_executable(zombieHandleCli zombieHandleCli.cpp)
add_executable(zombieHandler zombieHandler.cpp)
add_executable(zombieMultiCli zombieMultiCli.cpp)
add_executable(zombieWaitpid zombieWaitpid.cpp)
add_executable(zombieNoHandle zombieNoHandle.cpp)
add_executable(testSigpipe testSIGPIPE.cpp)
add_executable(selectCli selectCli.cpp)
add_executable(selectServ selectServ.cpp)
add_executable(selectServ2 selectServ2.cpp)
add_executable(shutdownServ shutdownServ.cpp)
add_executable(shutdownCli shutdownCli.cpp)
add_executable(shutdownCliTest shutdownCliTest.cpp)
add_executable(timeoutCli timeoutCli.cpp)
target_link_libraries(timeoutCli NetworkCoding)
add_executable(timeoutServ timeoutServ.cpp)
add_executable(connFileLimitTest connFileLimitTest.cpp)
add_executable(udpServ udpServ.cpp)
add_executable(pollServ pollServ.cpp)
